# address_validation

./: .env.example  .gitignore  Dockerfile  README.md  check_usaddress.py  docker-compose.yml  pyproject.toml
app/: main.py  schemas.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: address.py
app/core/: config.py  dependencies.py  exceptions.py  logging.py  security.py
app/interfaces/: validator.py
app/schemas/: __init__.py  common.py
app/services/: address_input_processor.py  cache_service.py  input_processor.py  validate_address_service.py
scripts/: debug_auth.py  manage_keys.py
tests/: test_auth.py  test_cache.py  test_caching_integration.py  test_error_handling.py  test_health.py  test_input_processor.py  test_logging.py  test_redis.py  test_validate.py  test_validate_service.py
