[project]
name = "address-validation-service"
version = "0.1.0"
description = "US Property Address Validation and Standardization Microservice"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "httpx",
    "redis",
    "asyncpg",
    "smartystreets-python-sdk>=4.24.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "black",
    "ruff",
    "fakeredis",
]

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing"
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.black]
line-length = 88
